# actix

./: README.md
1/: Cargo.toml  readme.md
1/src/: main.rs
10/src/: main.rs
10/static/: styles.css
13/: Cargo.toml  db.sh  readme.md
13/src/: main.rs
14/: readme.md
14/app setup/: app.txt  curl.txt  mysql.txt
14/app setup/sh save/setup/: db3.sh  readme.txt
14/article/: Cargo.toml  index.html
14/article/src/: main.rs
14/article/templates/: index.html  view_post.html
2/: Cargo.toml  readme.md
2/src/: main.rs
3/: readme.md
4/src/: main.rs
6/src/: main.rs
6/templates/: index.html  view_post.html
7/src/: main.rs
7/static/: styles.css
7/templates/: index.html  view_post.html
8/static/: styles.css
9/src/: main.rs
9/static/: styles.css
