[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
futures-util = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
sanitize-filename = "0.5.0"
mysql_async = "0.34.1"
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"  # Add this line
